fix too small drops

--- a/style.css
+++ b/style.css
@@ -607,7 +607,7 @@ input[type="text"] {
 
 
 .rect {
-    box-shadow: inset 0 0 0 1px black;
+    box-shadow: inset 0 0 0 1px gray;
     position: absolute;
     z-index: 9999;
 }
